[project]
name = "hongfang-camera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "flask>=3.0.0",
    "requests>=2.32.0",
    "pupil-apriltags>=1.0.4.post11",
]
